# Calculator-CLI

Calculator/: CMakeLists.txt  README.md  main.c  run_calculator.sh
